--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ SEARCH_CHANNEL=
 IS_BOT_PUBLIC=True
 TIDAL_REGION=IN
 TIDAL_SEARCH_LIMIT=10
-BOT_USERNAME=
-OWNER_USERNAME=
+BOT_USERNAME= @aio_private_bot
+OWNER_USERNAME= @gberube
 DATABASE_URL= postgresql://neondb_owner:RhLoO9mvKZI6@ep-damp-resonance-a1fkhspl.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 LOG_CHANNEL_ID=
 ALLOW_OTHER_LINKS=
