--- a/.env
+++ b/.env
@@ -1,16 +1,16 @@
-TG_BOT_TOKEN= 7309200919:AAHHzgmqwWmOTAlL3TXk9NJKebCsAozYWP8
-APP_ID= 8802706
-API_HASH= 97546900397a98f481bfb8252b1ac4f4
+TG_BOT_TOKEN=7309200919:AAHHzgmqwWmOTAlL3TXk9NJKebCsAozYWP8
+APP_ID=8802706
+API_HASH=97546900397a98f481bfb8252b1ac4f4
 USER_SESSION=
-AUTH_CHAT= -1002218869791
-ADMINS= "1281749717"
+AUTH_CHAT=-1002218869791
+ADMINS=1281749717
 ALLOW_DUMP=False
 SEARCH_CHANNEL=
 IS_BOT_PUBLIC=True
 TIDAL_REGION=IN
 TIDAL_SEARCH_LIMIT=10
-BOT_USERNAME= @aio_private_bot
-OWNER_USERNAME= @gberube
+BOT_USERNAME=@aio_private_bot
+OWNER_USERNAME=1281749717e
 DATABASE_URL= postgresql://neondb_owner:RhLoO9mvKZI6@ep-damp-resonance-a1fkhspl.ap-southeast-1.aws.neon.tech/neondb?sslmode=require
 LOG_CHANNEL_ID=
 ALLOW_OTHER_LINKS=
